Prevent PathAnimation from hanging when jumping backwards to beginning.

Task-number: QTBUG-23076
Change-Id: I2aecdfd28f0c3d45b3b805640edaecbd5be2e6fd
Reviewed-by: Yunqiao Yin <charles.yin@nokia.com>
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>